app/style/modal/group-creation.less
/*
 * Wire
 * Copyright (C) 2018 Wire Swiss GmbH
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program. If not, see http://www.gnu.org/licenses/.
 *
 */

.group-creation-modal {
  .group-creation-modal-action {
    transition: all 0.25s ease-in-out;
    opacity: 0.32;

    &.enabled {
      cursor: pointer;
      opacity: 1;
    }
  }

  .group-creation-modal-center {
    background-color: @app-bg;
    margin: 0;
    overflow: hidden;
    width: 100%;
    flex-grow: 1;
  }

  .group-creation-modal-content {
    padding: 0;
    width: 424px;
    height: 504px;
    display: flex;
    flex-direction: column;
  }

  .group-creation-modal-header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin: 0 16px;
    min-height: 44px;

    .icon-close {
      margin: 0;
    }
    .group-creation-header-block {
      width: 80px;
    }
  }
  .group-creation-modal-title,
  .group-creation-modal-action {
    .label-bold-xs();
    line-height: 12px;
  }

  .group-creation-modal-teamname-input {
    background-color: #fff;
    border-radius: 0;
    color: @graphite-dark;
    margin: 60px 0 0;
    height: 56px;
    line-height: 56px;

    &::placeholder {
      color: @graphite;
      font-size: @font-size-xs;
      padding: 0 8px;
      transform: translateY(-2px);
    }
  }

  .group-creation-modal-participants-input {
    margin: 8px;
  }

  user-list {
    .search-list-item {
      align-items: center;
      margin: 0 16px;
    }
  }

  .group-creation-error {
    .label-bold-xs();
    color: #fb0807;
    text-align: center;
    margin-top: 16px;
  }
}

